--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html && parcel watch src/index.html",
-    "build": "parcel build ./src/index.html -d static"
+    "build": "parcel build ./src/index.html -d docs"
   },
   "keywords": [],
   "author": "Dan Hernandez<dont@email.me>",
